--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,42 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary: #5c61e9;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.text-primary {
+  color: var(--primary);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.btn-primary {
+  border-radius: 10px;
+  padding: .5rem 1.8rem;
+  color: #ffffff;
+  background-color: var(--primary);
+  cursor: pointer;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.input-primary {
+  display: block;
+  width: 100%;
+
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  padding-left: 0;
+  padding-right: 0;
+
+  font-size: 0.875rem;
+
+  background-color: transparent;
+
+  border: none;
+  border-bottom: 2px solid var(--primary);
+
+  appearance: none;
+  outline: none;
+}
+
+.input-primary:focus {
+  border-bottom-color: var(--primary);
+  box-shadow: none;
 }
